--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,4 +1,4 @@
-// $body-bg: transparent;
+$body-bg: transparent;
 // $font-weight-base: 400;
-// $font-size-base: 0.9rem;
-// $font-family-base: "Roboto";
+$font-size-base: 13px;
+$font-family-base: "Roboto";
