--- a/resources/js/style/global.css
+++ b/resources/js/style/global.css
@@ -2,7 +2,8 @@ body {
   font-family: "Roboto", Fallback, sans-serif !important;
 
   /* font-size: calc(13px + 6 * ((100vw - 320px) / 1880)) !important; */
-  font-size: 14px !important;
+  font-size: 13px !important;
+  font-weight: 400 !important;
   color: rgb(49, 48, 48) !important;
   line-height: 26px !important;
   overflow-x: hidden !important;
