--- a/resources/sass/light/components/_navbar.scss
+++ b/resources/sass/light/components/_navbar.scss
@@ -8,12 +8,19 @@
     box-shadow: 1px 1px 1px rgba($color: #000000, $alpha: 0.5);
     z-index: 1;
   }
+
   .navbar-block-menu {
     padding: 0.8rem;
     background-color: #ffffff;
+
     @media (max-width: 700px) {
       padding: 1rem;
     }
+  }
+  .logo {
+    height: 35px !important;
+    width: 35px !important;
+    border-radius: 50%;
   }
   .second-navbar {
     background-color: rgb(255, 255, 255);
@@ -26,7 +33,7 @@
   .navbar-under {
     background-color: transparent;
     position: static;
-    height: 1rem;
+    min-height: 1rem;
   }
 
   .search-bar {
