--- a/resources/sass/light/app_light.scss
+++ b/resources/sass/light/app_light.scss
@@ -5,6 +5,7 @@
 @import "components/header.scss";
 @import "components/navbar.scss";
 @import "components/footer.scss";
+@import "components/footer-pre.scss";
 
 // /light/pages/
 @import "pages/login.scss";
